Preconciliation functionality * application.properties: Uninstalled jquery-ui plugin * PreconciliationController.groovy: Update controller. Fixed some bugs. * messages_es.properties: Update error message. * LotGeneratorService.groovy: Update service to use sessionFactory in order to get the connection. * SecurityLockService.groovy: Update method definition to throw SecurityLockException. * main.gsp: Aligned some lines. * _preconciliationBody.gsp: Update button input type. * index.gsp: Delete javascript. It was moved to a js file. * cmc.css: Update css file. * smoothness: Add jquery ui theme. * preconciliation.js: JS file that controls preconciliation functionality.

--- a/project/MercadoLibre_CMC/trunk/web-app/css/cmc.css
+++ b/project/MercadoLibre_CMC/trunk/web-app/css/cmc.css
@@ -110,45 +110,3 @@ div.autocomplete ul li {
     padding-left: 25px;
 }
 
-div.import {
-    font-weight: normal;
-    font-size: 16px;
-    margin: .8em 0 .3em 0;
-}
-
-div.import a.button {
-	background: url(../images/skin/lightning_go.png) center left no-repeat;
-    color: #333;
-    padding-left: 25px;
-}
-
-.my-state-hover {
-    background: #fff url(../images/skin/shadow.jpg);
-    color: #333;
-    display: block;
-    text-decoration: none;
-    width: 100%;
-}
-
-.selectable { 
-   list-style-type: none; 
-   margin: 0; 
-   padding: 0; 
-   width: 60%; 
-}
-
-.selectable li { 
-   margin: 3px; 
-   padding: 0.3em; 
-   font-size: 1.4em; 
-   height: 60px; 
-}
-
-.selectable .ui-selecting { 
-   background: #b2d1ff; 
-}
-.selectable .ui-selected { 
-   background: #0033FF; 
-   color: white; 
-}
-  
